--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Curiosidades sobre games</title>
 </head>
 <body>
-    
+    <header>
+        <img src="assests/image/icone.png" alt="">
+
+        <nav>
+            <a href=""><h2>Menu</h2></a>
+            <a href=""><h2>Categorias</h2></a>
+            <a href=""><h2>Portfólio</h2></a>
+            <a href=""><h2>Sobre mim</h2></a>
+            <a href=""><h2>Contato</h2></a>
+        </nav>
+    </header>   
+
+    <h3>
+        Muito jogos que nos jogamos sempre tem algum segredo ou nos arquivos, 
+        ou mesmo no proprio desenvolvimento. Nesse blog vou apresentar algumas
+        curiosidades de alguns jogo, que você provavelmente já jogou ou vai jogar.
+    </h3>
+
+    <h2>Sumario</h2>
+    <ol>
+        <li>Pokemon</li>
+        <li>Zelda</li>
+        <li>Dragon ball</li>
+        <li>Mario</li>
+        <li>Yu-gi-oh</li>
+    </ol>
+
 </body>
 </html>
