--- a/index.html
+++ b/index.html
@@ -33,5 +33,23 @@
         <li>Yu-gi-oh</li>
     </ol>
 
+    <h1>Pokemon</h1>
+    <h2>Foram criados mais de 300 Pokémon para os primeiros jogos</h2>
+    
+    <p>
+        Como sabemos, muitos pokemons acabam ficando de fora do jogos da franquia, 
+        especialmente quando se considera as restrições de espaço dos cartuchos antigos.
+        Em uma entrevista Ken Sugimori afirmou que foram criadas cerca de 
+        300 criaturas foram feitas no desenvolvimento de Pokémon Red & Green, 
+        algumas foram transportadas para a sequência Pokémon Gold & Silver, mas algumas 
+        foram simplesmente cortadas (ou adaptadas).
+
+        No Project N duas matérias foram produzidas falando 
+        especificamente dos monstrinhos cortados das primeiras gerações de Pokémon, 
+        se você está afim de saber mais sobre esse detalhe interessante da história da franquia clique aqui: 
+        <a href="https://projectn.com.br/pokemon-perdidos-cortados-modificados-primeiras-geracoes-parte-1/">Parte 1</a> e 
+        <a href="https://projectn.com.br/pokemon-perdidos-cortados-modificados-primeiras-geracoes-parte-2/">Parte 2</a> 
+    </p>
+
 </body>
 </html>
