--- a/index.html
+++ b/index.html
@@ -4,52 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curiosidades sobre games</title>
+    <link rel="stylesheet" href="/assests/css/style.css">
 </head>
 <body>
+    <h1>Meu Blog</h1>
     <header>
-        <img src="assests/image/icone.png" alt="">
-
-        <nav>
-            <a href=""><h2>Menu</h2></a>
-            <a href=""><h2>Categorias</h2></a>
-            <a href=""><h2>Portfólio</h2></a>
-            <a href=""><h2>Sobre mim</h2></a>
-            <a href=""><h2>Contato</h2></a>
+        <nav class="nav-bar">
+            <ul>
+                <li><a href="">Menu</a></li>
+                <li><a href="">Categorias</a></li>
+                <li><a href="">Sobre mim</a></li>
+                <li><a href="">Contato</a></li>
+            </ul>
         </nav>
     </header>   
 
-    <h3>
+    <main>
+        <h3>
         Muito jogos que nos jogamos sempre tem algum segredo ou nos arquivos, 
         ou mesmo no proprio desenvolvimento. Nesse blog vou apresentar algumas
         curiosidades de alguns jogo, que você provavelmente já jogou ou vai jogar.
-    </h3>
+        </h3>
 
-    <h2>Sumario</h2>
-    <ol>
-        <li>Pokemon</li>
-        <li>Zelda</li>
-        <li>Dragon ball</li>
-        <li>Mario</li>
-        <li>Yu-gi-oh</li>
-    </ol>
+        <h2>Sumario</h2>
 
-    <h1>Pokemon</h1>
-    <h2>Foram criados mais de 300 Pokémon para os primeiros jogos</h2>
+        <ol>
+            <li>Pokemon</li>
+            <li>Zelda</li>
+            <li>Dragon ball</li>
+            <li>Mario</li>
+            <li>Yu-gi-oh</li>
+        </ol>
+
+        <h1>Pokemon</h1>
+        <h2>Foram criados mais de 300 Pokémon para os primeiros jogos</h2>
+
+        <img src="/assests/image/pokemon1.png" alt="">
+
+        <p>
+            Como sabemos, muitos pokemons acabam ficando de fora do jogos da franquia, 
+            especialmente quando se considera as restrições de espaço dos cartuchos antigos.
+            Em uma entrevista Ken Sugimori afirmou que foram criadas cerca de 
+            300 criaturas foram feitas no desenvolvimento de Pokémon Red & Green, 
+            algumas foram transportadas para a sequência Pokémon Gold & Silver, mas algumas 
+            foram simplesmente cortadas (ou adaptadas).
     
-    <p>
-        Como sabemos, muitos pokemons acabam ficando de fora do jogos da franquia, 
-        especialmente quando se considera as restrições de espaço dos cartuchos antigos.
-        Em uma entrevista Ken Sugimori afirmou que foram criadas cerca de 
-        300 criaturas foram feitas no desenvolvimento de Pokémon Red & Green, 
-        algumas foram transportadas para a sequência Pokémon Gold & Silver, mas algumas 
-        foram simplesmente cortadas (ou adaptadas).
+            No Project N duas matérias foram produzidas falando 
+            especificamente dos monstrinhos cortados das primeiras gerações de Pokémon, 
+            se você está afim de saber mais sobre esse detalhe interessante da história da franquia clique aqui: 
+            <a href="https://projectn.com.br/pokemon-perdidos-cortados-modificados-primeiras-geracoes-parte-1/">Parte 1</a> e 
+            <a href="https://projectn.com.br/pokemon-perdidos-cortados-modificados-primeiras-geracoes-parte-2/">Parte 2</a> 
+        </p>
+    
 
-        No Project N duas matérias foram produzidas falando 
-        especificamente dos monstrinhos cortados das primeiras gerações de Pokémon, 
-        se você está afim de saber mais sobre esse detalhe interessante da história da franquia clique aqui: 
-        <a href="https://projectn.com.br/pokemon-perdidos-cortados-modificados-primeiras-geracoes-parte-1/">Parte 1</a> e 
-        <a href="https://projectn.com.br/pokemon-perdidos-cortados-modificados-primeiras-geracoes-parte-2/">Parte 2</a> 
-    </p>
-
+    </main>
 </body>
 </html>
