--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curiosidades sobre games</title>
-    <link rel="stylesheet" href="/assests/css/style.css">
+    <link rel="stylesheet" href="./assests/css/style.css">
 </head>
 <body>
     <h1>Meu Blog</h1>
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="">Menu</a></li>
                 <li><a href="">Categorias</a></li>
-                <li><a href="">Sobre mim</a></li>
+                <li><a href="./sobre-mim.html">Sobre mim</a></li>
                 <li><a href="">Contato</a></li>
             </ul>
         </nav>
@@ -56,7 +56,20 @@
             <a href="https://projectn.com.br/pokemon-perdidos-cortados-modificados-primeiras-geracoes-parte-2/">Parte 2</a> 
         </p>
     
+        <h1> The Legend of Zelda</h1>
+        <h2>Para criar Zelda, os desenvolvedores se inspiraram em Indiana Jones</h2>
 
+        <img class="zelda" src="./assests/image/zelda.jpg" alt="">
+
+        <p>
+            Em uma entrevista, Shigeru Miyamoto falou sobre o processo de criação de The Legend of Zelda 
+            e citou os filmes protagonizados pelo arqueólogo Indiana Jones como uma grande inspiração.
+            Sua declaração foi: “os filmes Indiana Jones também saíram por volta dessa época. Eu queria 
+            recriar esse tipo de aventura em um jogo e as pessoas que jogavam RPG na época estavam sempre 
+            se gabando da força dos seus personagens e telefonando umas para as outras para trocarem esse 
+            tipo de informações. Com um mundo de espadas e magia como tema, decidi criar um jogo de aventura 
+            baseado numa caça ao tesouro. E assim surgiu The Legend of Zelda”.
+        </p>
     </main>
 </body>
 </html>
