--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <li><a href="">Menu</a></li>
                 <li><a href="">Categorias</a></li>
                 <li><a href="./sobre-mim.html">Sobre mim</a></li>
-                <li><a href="">Contato</a></li>
+                <li><a href="./contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>   
