--- a/contato.html
+++ b/contato.html
@@ -47,8 +47,20 @@
             </div>
 
             <div class="campo linha">
-                <input type="submit" id="botao">
+                <label for="novidades">Deseja receber novidades da pagina no E-mail?</label>    
             </div>
+
+            <div>
+                <input type="radio" id="Sim" name="drone" value="Sim" checked />
+                <label for="Sim">Sim</label>
+            </div>
+
+            <div>
+                <input type="radio" id="Não" name="drone" value="Não" />
+                <label for="Não">Não</label>
+            </div>
+
+            <button type="submit">Enviar</button>
         </form>
     </section>
 
