--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -11,10 +11,18 @@
     <header>
         <nav class="nav-bar">
             <ul>
-                <li><a href="./menu.html">Menu</a></li>
-                <li><a href="">Categorias</a></li>
-                <li><a href="./sobre-mim.html">Sobre mim</a></li>
-                <li><a href="">Contato</a></li>
+                <ul>
+                    <li><a href="./index.html">Menu</a></li>
+                    <li class="dropdown"><a href="#" class="dropbtn">Outras noticias
+                    </a>
+                    <div class="conteudo_dropdown">
+                        <a href="./top100.html">Top 100 jogos mais jogados do mundo</a>
+                        <a href="#">Teste</a>
+                        <a href="#">Teste</a>
+                        </div>
+                    </li>
+                    <li><a href="./sobre-nos.html">Sobre nos</a></li>
+                    <li><a href="./contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>   
@@ -65,5 +73,16 @@
             </li>
         </ul>
     </section>
+    <footer>
+        <p>&copy; 2023 - Todos os direitos reservados</p>
+        <nav class="footer_nav">
+            <ul>
+                <li><a href="#">Termos de uso</a></li>
+                <li><a href="#">Política de privacidade</a></li>
+                <li><a href="#">Sobre nós</a></li>
+                <li><a href="#">Contato</a></li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 </html>
