--- a/contato.html
+++ b/contato.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio</title>
     <link rel="stylesheet" href="./assests/css/style.css">
+    <script src="./assests/js/script_contato.js" defer></script>
 </head>
 <body>
     <h1>Meu Blog</h1>
@@ -13,15 +14,16 @@
             <ul>
                 <li><a href="./index.html">Menu</a></li>
                 <li><a href="">Categorias</a></li>
-                <li><a href="./sobre-mim.html">Sobre mim</a></li>
+                <li><a href="./sobre-nos.html">Sobre mim</a></li>
                 <li><a href="./contato.html">Contato</a></li>
+                <input type="text" id="pesquisar" placeholder="Pesquisar...">
             </ul>
         </nav>
     </header>
-
+  
     <section id="secao-orcamento">
         <h2>Contato</h2>
-        <form action="">
+        <form action="" id="formulario">
             <div class="campo linha">
                 <label for="nome" >Nome</label>
                 <input type="text" id="nome">
@@ -63,5 +65,15 @@
             <button type="submit">Enviar</button>
         </form>
     </section>
-
+    <footer>
+        <p>&copy; 2023 - Todos os direitos reservados</p>
+        <nav class="footer_nav">
+            <ul>
+                <li><a href="#">Termos de uso</a></li>
+                <li><a href="#">Política de privacidade</a></li>
+                <li><a href="#">Sobre nós</a></li>
+                <li><a href="#">Contato</a></li>
+            </ul>
+        </nav>
+    </footer>
 </body>
